# util_append

./: .gitignore  README.md
max_plugins/: FindMaxSDK.cmake
max_plugins/MaxCppPy/: CMakeLists.txt  build.bat  main.cpp
max_plugins/MyPlugIn/: CMakeLists.txt  HelloUtil.cpp  HelloUtil.h  MyPlugIn.cpp  build.bat
max_plugins/bipedCOMValueScale/: BipedCOMValueScale.cpp  CMakeLists.txt  DllMain.cpp  build.bat
testcpp/C++11ABI/: A.cpp  B.cpp  CMakeLists.txt  main.cpp
testcpp/SIMD/: CMakeLists.txt  main.cpp
testcpp/attribute_visibility/: CMakeLists.txt  main.cpp  test.cpp  test.h
testcpp/bad_alloc/: CMakeLists.txt  main.cpp
testcpp/bit_field/: CMakeLists.txt  main.cpp
testcpp/boost_filesystem/: CMakeLists.txt  build.sh  main.cpp  test.cpp
testcpp/boost_python/: CMakeLists.txt  build.sh  main.cpp  test.py
testcpp/call_once/: main.cpp
testcpp/cast/: main.cpp
testcpp/char_pointer/: main.cpp
testcpp/compile_without_so/: CMakeLists.txt  main.cpp  shared1.cpp  shared2.cpp
testcpp/concept/: CMakeLists.txt  build.sh  main_HasNum.cpp  main_HasSquare.cpp
testcpp/cpp_safe/: main.cpp
testcpp/delete_this/: main.cpp
testcpp/dynamic_reload/: CMakeLists.txt  build.sh  main.cpp  shared.cpp
testcpp/expand_env_var/: main.cpp
testcpp/filesystem/: CMakeLists.txt  main.cpp
testcpp/forward/: CMakeLists.txt  main.cpp
testcpp/helloWorld/: main.cpp
testcpp/mpi/: CMakeLists.txt  build.sh
testcpp/observer/: main.cpp
testcpp/parallel_cpp/: CMakeLists.txt  main.cpp
testcpp/python_embed/: CMakeLists.txt  build.sh  test.py
testcpp/python_extending/: CMakeLists.txt  README.md  main.cpp
testcpp/redefine_macro/: main.cpp
testcpp/regex/: CMakeLists.txt  main.cpp  regex_new_ABI.cpp  regex_old_ABI.cpp
testcpp/regex_nx/: CMakeLists.txt  build.sh  main.cpp  regex_old_ABI.cpp
testcpp/regex_nx/of3d_license/: GenericPlatformMisc.cpp  GenericPlatformMisc.h  UnixPlatformMisc.cpp  UnixPlatformMisc.h  WindowsPlatformMisc.cpp  WindowsPlatformMisc.h  license_utility.cpp  license_utility.h
testcpp/scons_cpp/: .sconsign.dblite  SConstruct  scons_cpp
testcpp/scons_cpp/src/: main.cpp
testcpp/shared/: CMakeLists.txt  build.sh  main.cpp  shared.h
testcpp/signal_slot_1/: signal.h
testcpp/signal_slot_2/: main.cpp  slot.h
testcpp/static_link_shared/: CMakeLists.txt  build.sh  main.cpp  shared.cpp  static.cpp
testcpp/static_tbb/: Makefile  main.cpp
testcpp/stringsplit/: build.sh  main.cpp
testcpp/to_functional/: main.cpp
testcpp/transform/: main.cpp
testcpp/unordered_map_emplace/: build.sh  main.cpp
tips/: conda_tips.md  tips.md
tips/CMake_utils/: CMakeLists.txt  FindXXX.cmake  build.bat
tips/MayaPlugin/: CMakeLists.txt
tips/boost_filesystem_cmake_install_deps/: CMakeLists.txt
tips/swig_cmake/: CMakeLists.txt  build.bat  build.sh  header.h  loader.cpp  swig.i
util_append/: Cmake_tips.md  bash_tips.md  cpp_tips.md
util_append/CMake_utils/: CMakeLists.txt  build.bat  build.sh
util_append/MayaPlugin/: CMakeLists.txt
util_append/NXhelper/: CMakeLists.txt  NXhelper.cpp  NXhelper.h  build.sh  main.cpp
util_append/NXhelper/CMake_Modules/: FindNXRenderer.cmake
util_append/boost_filesystem_cmake_install_deps/: build.sh  main.cpp
util_append/swig_cmake/: main.cpp
